--- a/config.json
+++ b/config.json
@@ -1,4 +1,4 @@
 {
-    "token":"MTE5MzIwMjY3NTE1Njc4NzMwMQ.GLN9gu.1FSuu6hw65lMkd3nbkp53dVC1V-Ob1IRtRzOSo",
-    "serverID":"1192792799947538472"
+    "token":"",
+    "serverID":""
 }
